--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,8 +7,14 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
+    strategy:
+      matrix:
+        neo4j_version:
+        - "4.3"
+        - "4.3-enterprise"
+        - "4.4"
+        - "4.4-enterprise"
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -18,8 +24,7 @@ jobs:
       with:
         go-version: 1.18
 
-    - name: Build
-      run: go build -v ./...
-
     - name: Test
-      run: go test -v ./pkg/...
+      env:
+        NEO4J_VERSION: ${{ matrix.neo4j_version }}
+      run: go test -v ./...
